--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="apple-mobile-web-app-title" content="Célia Marmitas">
   
   <!-- SEO Meta Tags -->
-  <title>Restaurante da Célia - Marmitas Delivery | Cardápio Digital</title>
-  <meta name="description" content="Peça suas marmitas favoritas de forma rápida e prática. Cardápio digital com opções personalizáveis e entrega via WhatsApp. Marmitas de 750mL fresquinhas todos os dias.">
-  <meta name="keywords" content="marmita, delivery, comida caseira, restaurante, cardápio digital, whatsapp, 750ml">
-  <meta name="author" content="Restaurante da Célia">
+  <title>Marmita.One - Delivery Digital | Cardápio Interativo</title>
+  <meta name="description" content="Plataforma digital para pedidos de marmitas. Cardápio interativo, personalização completa e entrega via WhatsApp. Marmitas de 750mL fresquinhas todos os dias.">
+  <meta name="keywords" content="marmita, delivery, comida caseira, cardápio digital, whatsapp, 750ml, marmita.one">
+  <meta name="author" content="Marmita.One">
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph Meta Tags -->
@@ -100,10 +100,10 @@
   <!-- Header -->
   <header class="app-header">
     <div class="container">
-      <div class="brand-logo" aria-label="Logo Restaurante da Célia"></div>
-      <h1 class="text-center">Restaurante da Célia</h1>
+      <div class="brand-logo" aria-label="Logo Marmita.One"></div>
+      <h1 class="text-center">Marmita.One</h1>
       <p class="text-center text-lg" style="color: rgba(255,255,255,0.9); margin: var(--spacing-4) 0 0;">
-        Marmitas fresquinhas de <strong>750mL</strong> • Seu prato, seu jeito
+        Delivery Digital • Marmitas <strong>especiais</strong> • Seu prato, seu jeito
       </p>
     </div>
   </header>
@@ -119,6 +119,9 @@
         <p style="font-size: var(--font-size-lg); color: var(--color-text-secondary); max-width: 600px; margin: 0 auto;">
           Escolha entre personalizar completamente sua marmita ou selecionar uma de nossas combinações prontas
         </p>
+        <div class="badge badge-primary" style="margin-top: var(--spacing-4);">
+          v0.1.0-beta • Em desenvolvimento
+        </div>
       </section>
 
       <!-- Option Cards -->
@@ -144,7 +147,7 @@
       <section class="card" style="margin-bottom: var(--spacing-12);">
         <div class="card-body">
           <h3 class="text-center" style="margin-bottom: var(--spacing-8); color: var(--brand-primary);">
-            🌟 Por que escolher o Restaurante da Célia?
+            🌟 Por que escolher o Marmita.One?
           </h3>
           
           <div class="grid md:grid-cols-3" style="gap: var(--spacing-6);">
@@ -207,10 +210,10 @@
   <footer class="app-footer">
     <div class="container text-center">
       <p style="margin-bottom: var(--spacing-2);">
-        <strong>Restaurante da Célia</strong> • Marmitas Delivery
+        <strong>Marmita.One</strong> • Delivery Digital
       </p>
       <p style="font-size: var(--font-size-sm); color: var(--color-text-muted); margin: 0;">
-        🕐 Pedidos até às 14:30 • 📱 WhatsApp Delivery • v2.0.0
+        🕐 Pedidos até às 14:30 • 📱 WhatsApp Delivery • v0.1.0-beta
       </p>
     </div>
   </footer>
