--- a/pages/presets.html
+++ b/pages/presets.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Opções Prontas - Restaurante da Célia</title>
+  <title>Opções Prontas - Marmita.One</title>
   <meta name="theme-color" content="#0a7d4f">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
   
   <style>
     :root{
