--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0a7d4f">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="Célia Marmitas">
+  <meta name="apple-mobile-web-app-title" content="Marmita.One">
   
   <!-- SEO Meta Tags -->
   <title>Marmita.One - Delivery Digital | Cardápio Interativo</title>
@@ -16,17 +16,17 @@
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Restaurante da Célia - Marmitas Delivery">
-  <meta property="og:description" content="Peça suas marmitas favoritas de forma rápida e prática. Cardápio digital com opções personalizáveis.">
+  <meta property="og:title" content="Marmita.One - Delivery Digital">
+  <meta property="og:description" content="Plataforma digital para pedidos de marmitas. Cardápio interativo e personalização completa.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://restaurante-celia.com">
+  <meta property="og:url" content="https://marmita.one">
   <meta property="og:image" content="/assets/icons/icon-512x512.png">
   <meta property="og:locale" content="pt_BR">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Restaurante da Célia - Marmitas Delivery">
-  <meta name="twitter:description" content="Peça suas marmitas favoritas de forma rápida e prática.">
+  <meta name="twitter:title" content="Marmita.One - Delivery Digital">
+  <meta name="twitter:description" content="Plataforma digital para pedidos de marmitas. Cardápio interativo e personalização completa.">
   <meta name="twitter:image" content="/assets/icons/icon-512x512.png">
   
   <!-- PWA Manifest -->
