--- a/pages/presets.html
+++ b/pages/presets.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Opções Prontas - Marmita.One</title>
   <meta name="theme-color" content="#0a7d4f">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="../manifest.json">
   
   <style>
     :root{
@@ -146,11 +146,11 @@
     </div>
 
     <footer>
-      <small>MARMITA.ONE • v1.0 • <a href="index.html" style="color:inherit">← Voltar ao início</a></small>
+  <small>MARMITA.ONE • v1.0 • <a href="../index.html" style="color:inherit" id="btn-voltar-inicio">← Voltar ao início</a></small>
     </footer>
   </div>
 
-  <script src="shared.js"></script>
+  <script src="../assets/js/app.js"></script>
   <script>
     // Funções específicas para presets
     function matchFromListTerm(list, term){
