--- a/index.html
+++ b/index.html
@@ -288,54 +288,64 @@ if ('serviceWorker' in navigator) {
 const CONFIG = {
   identidade: { nome:"Restaurante da Célia", sub:"Seu prato, seu jeito. Monte agora!", cutoff:"14:30" },
   regras: { limiteAcompanhamentos: null, obrigatorios:["tamanho","proteina"], precoAdicional:2, precoCarneExtra:8 },
-  tamanhos: [
-    { id:"S", nome:"Pequena • 500 ml", valor:18.00, aliases:["p","pequena","500","pequeno"] },
-  { id:"L", nome:"Grande • 750 mL",  valor:20.00, aliases:["g","grande","750","750ml","750 ml","1l","1000","1 l"] }
-  ],
-  proteinas: [
-    { nome:"Lombo assado ao molho madeira", aliases:["lombo","madeira"] },
-    { nome:"Carne cozida", aliases:["carne cozida","cozida"] },
-    { nome:"Strogonoff de frango", aliases:["strogonoff","strogo","frango"] }
-  ],
-  acompanhamentos: [
-    "Arroz","Feijão","Farofa","Maionese","Macarrão alho e óleo","Batata palha",
-    "Salada verde","Vinagrete","Brócolis","Cenoura (cozida/ralada)","Beterraba cozida","Alface","Tomate","Vagem","Chuchu"
-  ],
-  adicionais2: [
-    "Arroz separado","Feijão separado","Batata palha separada","Maionese separada","Macarrão separado","Salada extra","Embalagem separada","Molho extra"
-  ],
-  carnesExtras8: [
-    "Porção extra de lombo (molho madeira)","Porção extra de carne cozida","Porção extra de strogonoff de frango"
-  ],
-  bebidas: [
-    { nome:"Coca-Cola Lata 350ml", valor:6.00, aliases:["coca lata","coca 350","coca 350ml","coca"] },
-    { nome:"Coca-Cola Zero Lata 350ml", valor:6.00, aliases:["coca zero lata","coca zero 350"] },
-    { nome:"Coca-Cola 600ml", valor:8.00, aliases:["coca 600","coca 600ml"] },
-    { nome:"Coca-Cola 1L", valor:10.00, aliases:["coca 1l","coca 1 l"] },
-    { nome:"Coca-Cola 2L", valor:14.00, aliases:["coca 2l","coca 2 l","pet 2l"] },
-    { nome:"Coca-Cola Zero 2L", valor:14.00, aliases:["coca zero 2l"] },
-    { nome:"Coca-Cola Mini 200ml", valor:4.00, aliases:["mini coca","coca 200"] },
-    { nome:"Fanta Laranja Lata 350ml", valor:5.50, aliases:["fanta laranja","fanta lata"] },
-    { nome:"Fanta Uva Lata 350ml", valor:5.50, aliases:["fanta uva"] },
-    { nome:"Sprite Lata 350ml", valor:5.50, aliases:["sprite lata","sprite"] },
-    { nome:"Schweppes Lata 350ml", valor:6.00, aliases:["schweppes"] }
+
+    <header>
+      <div class="brand-mark" aria-hidden="true"><span class="logo-square" role="img" aria-label="Logo"></span></div>
+      <h1 id="resto-nome">Restaurante (CONFIG)</h1>
+      <p id="resto-sub">Seu prato, seu jeito. Monte agora!</p>
+      <div class="pill">⏰ Pedidos até <strong id="cutoff-label">14:30</strong></div>
+    </header>
+
+    <!-- Tela inicial de escolha de fluxo -->
+    <section class="card" id="start-menu">
+      <h2>Como deseja montar sua marmita?</h2>
+      <div class="actions" style="margin-top:18px">
+        <button class="btn btn-primary" id="btn-flow-custom">Quero montar minha marmita</button>
+        <button class="btn btn-promo" id="btn-flow-preset">Escolher opções prontas</button>
+      </div>
+    </section>
+
+    <div id="main-flows" class="hide">
+      <div class="grid">
+        <section class="card" id="builder-default">
+          ...existing code...
+        </section>
+        <section class="card hide" id="builder-ios">
+          ...existing code...
+        </section>
+        <aside class="card cart" id="cart">
+          ...existing code...
+        </aside>
+      </div>
+      <section class="card" id="checkout" style="margin-top:12px">
+        ...existing code...
+      </section>
+      <footer>
+        ...existing code...
+      </footer>
+      <div class="topbar">
+        ...existing code...
+      </div>
+    </div>
+    { nome:"Suco Kapo", valor:3.50, aliases:["suco kapo","kapo","suco de caixinha","suco caixinha","caixinha"] },
+    { nome:"Suco Lata", valor:6.00, aliases:["suco","suco lata"] }
   ],
   presetsIOS: {
     opcao1: {
       label:"Opção 1",
       tamanho:"G",
-      proteina:"Lombo assado ao molho madeira",
-      acc:"Arroz, Feijão, Farofa, Maionese, Salada verde",
+      proteina:"Bife de Frango",
+      acc:"Arroz, Feijão, Angu, Quiabo, Almeirão Refogado, Saladas",
       add2:"",
       add8:"",
-      bebidas:"Coca-Cola Lata 350ml",
+      bebidas:"",
       obs:""
     },
     opcao2: {
       label:"Opção 2",
       tamanho:"G",
-      proteina:"Strogonoff de frango",
-      acc:"Arroz, Batata palha, Salada verde",
+      proteina:"Carne Cozida",
+      acc:"Arroz, Feijão, Farofa, Batata Ensopada, Saladas",
       add2:"",
       add8:"",
       bebidas:"",
@@ -725,7 +735,64 @@ function init(){
   renderPreview();
 }
 
-document.addEventListener("DOMContentLoaded", init);
+document.addEventListener("DOMContentLoaded", function() {
+  init();
+  // Fluxo de tela inicial
+  const startMenu = document.getElementById("start-menu");
+  const mainFlows = document.getElementById("main-flows");
+  const btnCustom = document.getElementById("btn-flow-custom");
+  const btnPreset = document.getElementById("btn-flow-preset");
+  const builderDefault = document.getElementById("builder-default");
+  const builderIOS = document.getElementById("builder-ios");
+
+  function showFlow(flow) {
+    startMenu.classList.add("hide");
+    mainFlows.classList.remove("hide");
+    if (flow === "custom") {
+      builderDefault.classList.remove("hide");
+      builderIOS.classList.add("hide");
+      setMode("default");
+    } else {
+      builderDefault.classList.add("hide");
+      builderIOS.classList.remove("hide");
+      setMode("ios");
+    }
+    setTimeout(() => {
+      mainFlows.scrollIntoView({behavior: "smooth", block: "start"});
+    }, 50);
+  }
+  btnCustom.addEventListener("click", () => showFlow("custom"));
+  btnPreset.addEventListener("click", () => showFlow("preset"));
+});
+document.addEventListener("DOMContentLoaded", function() {
+  init();
+  // Fluxo de tela inicial
+  const startMenu = document.getElementById("start-menu");
+  const mainFlows = document.getElementById("main-flows");
+  const btnCustom = document.getElementById("btn-flow-custom");
+  const btnPreset = document.getElementById("btn-flow-preset");
+  const builderDefault = document.getElementById("builder-default");
+  const builderIOS = document.getElementById("builder-ios");
+
+  function showFlow(flow) {
+    startMenu.classList.add("hide");
+    mainFlows.classList.remove("hide");
+    if (flow === "custom") {
+      builderDefault.classList.remove("hide");
+      builderIOS.classList.add("hide");
+      setMode("default");
+    } else {
+      builderDefault.classList.add("hide");
+      builderIOS.classList.remove("hide");
+      setMode("ios");
+    }
+    setTimeout(() => {
+      mainFlows.scrollIntoView({behavior: "smooth", block: "start"});
+    }, 50);
+  }
+  btnCustom.addEventListener("click", () => showFlow("custom"));
+  btnPreset.addEventListener("click", () => showFlow("preset"));
+});
 </script>
 </body>
 </html>
