--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="format-detection" content="telephone=no" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#1976d2" />
-    <link rel="icon" href="icons/icon-192x192.png" sizes="192x192" />
+  <link rel="icon" href="icons/icon-192x192.png" sizes="192x192" />
+  <link rel="apple-touch-icon" href="icons/icon-512x512.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>MARMITA.ONE</title>
     <link rel="stylesheet" href="src/app.css" />
   </head>
